[package]
name = "iftar-ne-zaman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.11"
reqwest = {version = "0.11.15", features =  ["blocking"]}
serde = "1.0.158"
serde_json = "1.0.94"
serde_derive = "1.0.158"
chrono = "0.4.24"
prettytable-rs = "^0.10"
termion = "*"